==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/NXP/LPC17xx/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#include  <bsp.h>
#define  U0_BASE                ((CPU_INT32U)0x4000C000)
#define  U1_BASE                ((CPU_INT32U)0x40010000)
#define  U2_BASE                ((CPU_INT32U)0x40098000)
#define  U3_BASE                ((CPU_INT32U)0x4009C000)
#define  PINSEL_BASE            ((CPU_INT32U)0xE002C000)
#define  VIC_UART0                                         6
#define  VIC_UART1                                         7
#define  VIC_UART2                                        28
#define  VIC_UART3                                        29
#define  PCLK_UART0                                        3
#define  PCLK_UART1                                        4
#define  PCLK_UART2                                       24
#define  PCLK_UART3                                       25
#define  PCUART0                                  DEF_BIT_03
#define  PCUART1                                  DEF_BIT_04
#define  PCUART2                                  DEF_BIT_24
#define  PCUART3                                  DEF_BIT_25
#define  PCONP              (*(volatile CPU_INT32U *)(0xE01FC0C4))
#define  U0RBR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0THR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLL              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLM              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0004))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT16U  div;
    CPU_INT08U  divlo;
    CPU_INT08U  divhi;
    CPU_INT32U  pclk_freq;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    BSP_PM_PerClkEn(BSP_PM_PER_NBR_UART0);                      /* Enable UART0 peripheral.                             */

                                                                /* ------------ COMPUTE DIVISOR BAUD RATE ------------- */
    pclk_freq  = BSP_PM_PerClkFreqGet(BSP_PM_PER_NBR_UART0);    /* Get the CPU clock frequency                          */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ----------------- ENABLE UART0 I/Os ---------------- */
    BSP_GPIO_Cfg(BSP_GPIO_PORT0_FAST,                           /* P0.2 Function 02 = TXD0                              */
                 DEF_BIT_02 | DEF_BIT_03,                       /* P0.3 Function 02 = RXD0                              */
                 BSP_GPIO_OPT_FNCT_2);
    
                                                                /* ------------------- SETUP UART0 -------------------- */
    U0LCR     = DEF_BIT_07;                                     /* Set divisor access bit                               */
    U0DLL     = divlo;                                          /* Load divisor                                         */
    U0DLM     = divhi;
    U0LCR     = 0x03;                                           /* Set line control register (Bit 8 is 0)               */
    U0IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                    */
    U0FDR     = 0x00;                                           /* Disable fractional dividers                          */
    U0FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                           */

                                                                /* ---- INITIALIZE INTERRUPT CONTROLLER FOR UART0 ----- */
    BSP_IntVectSet((CPU_INT08U   )BSP_INT_SRC_NBR_UART0,        
                   (CPU_FNCT_VOID)ProbeRS232_RxTxISRHandler);

    BSP_IntEn(BSP_INT_SRC_NBR_UART0);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    BSP_PM_PerClkEn(BSP_PM_PER_NBR_UART1);                      /* Enable UART1 peripheral.                             */

                                                                /* ------------ COMPUTE DIVISOR BAUD RATE ------------- */
    pclk_freq  = BSP_PM_PerClkFreqGet(BSP_PM_PER_NBR_UART1);    /* Get the CPU clock frequency                          */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ----------------- ENABLE UART1 I/Os ---------------- */
    BSP_GPIO_Cfg(BSP_GPIO_PORT0_FAST,                           /* P0.15 Function 02 = TXD1                             */
                 DEF_BIT_15 | DEF_BIT_16,                       /* P0.16 Function 02 = RXD1                             */
                 BSP_GPIO_OPT_FNCT_2);
    
                                                                /* ------------------- SETUP UART1 -------------------- */
    U1LCR     = DEF_BIT_07;                                     /* Set divisor access bit                               */
    U1DLL     = divlo;                                          /* Load divisor                                         */
    U1DLM     = divhi;
    U1LCR     = 0x03;                                           /* Set line control register (Bit 8 is 0)               */
    U1IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                    */
    U1FDR     = 0x00;                                           /* Disable fractional dividers                          */
    U1FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                           */

                                                                /* ---- INITIALIZE INTERRUPT CONTROLLER FOR UART1 ----- */
    BSP_IntVectSet((CPU_INT08U   )BSP_INT_SRC_NBR_UART1,        
                   (CPU_FNCT_VOID)ProbeRS232_RxTxISRHandler);

    BSP_IntEn(BSP_INT_SRC_NBR_UART1);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    BSP_PM_PerClkEn(BSP_PM_PER_NBR_UART2);                      /* Enable UART2 peripheral.                             */

                                                                /* -------------- COMPUTE DIVISOR BAUD RATE ----------- */
    pclk_freq  = BSP_PM_PerClkFreqGet(BSP_PM_PER_NBR_UART2);    /* Get the CPU clock frequency                          */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ----------------- ENABLE UART0 I/Os ---------------- */
    BSP_GPIO_Cfg(BSP_GPIO_PORT0_FAST,                           /* P0.10 Function 02 = TXD2                             */
                 DEF_BIT_10 | DEF_BIT_11,                       /* P0.11 Function 02 = RXD2                             */
                 BSP_GPIO_OPT_FNCT_2);
    
                                                                /* -------------------- SETUP UART2 ------------------- */
    U2LCR     = DEF_BIT_07;                                     /* Set divisor access bit                               */
    U2DLL     = divlo;                                          /* Load divisor                                         */
    U2DLM     = divhi;
    U2LCR     = 0x03;                                           /* Set line control register (Bit 8 is 0)               */
    U2IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                    */
    U2FDR     = 0x00;                                           /* Disable fractional dividers                          */
    U2FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                           */

                                                                /* ----- INITIALIZE INTERRUPT CONTROLLER FOR UART2 ---- */
    BSP_IntVectSet((CPU_INT08U   )BSP_INT_SRC_NBR_UART2,        
                   (CPU_FNCT_VOID)ProbeRS232_RxTxISRHandler);

    BSP_IntEn(BSP_INT_SRC_NBR_UART2);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    BSP_PM_PerClkEn(BSP_PM_PER_NBR_UART3);                      /* Enable UART3 peripheral.                             */

                                                                /* ------------- COMPUTE DIVISOR BAUD RATE ------------ */
    pclk_freq  = BSP_PM_PerClkFreqGet(BSP_PM_PER_NBR_UART3);    /* Get the CPU clock frequency                          */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ----------------- ENABLE UART3 I/Os ---------------- */
    BSP_GPIO_Cfg(BSP_GPIO_PORT0_FAST,                           /* P0.0 Function 03 = TXD3                              */
                 DEF_BIT_00 | DEF_BIT_01,                       /* P0.1 Funciton 03 = RXD3                              */
                 BSP_GPIO_OPT_FNCT_3);
    
                                                                /* --------------------- SETUP UART3 ------------------ */
    U3LCR     = DEF_BIT_07;                                     /* Set divisor access bit                               */
    U3DLL     = divlo;                                          /* Load divisor                                         */
    U3DLM     = divhi;
    U3LCR     = 0x03;                                           /* Set line control register (Bit 8 is 0)               */
    U3IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                    */
    U3FDR     = 0x00;                                           /* Disable fractional dividers                          */
    U3FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                           */

                                                                /* ---- INITIALIZE INTERRUPT CONTROLLER FOR UART3 ----- */
    BSP_IntVectSet((CPU_INT08U   )BSP_INT_SRC_NBR_UART3,        
                   (CPU_FNCT_VOID)ProbeRS232_RxTxISRHandler);

    BSP_IntEn(BSP_INT_SRC_NBR_UART3);
#endif
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER &= ~DEF_BIT_00;
#endif
}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER |= DEF_BIT_00;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3THR = c;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER &= ~DEF_BIT_01;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER |= DEF_BIT_01;
#endif
}
